# frankshoard

./: Cargo.toml  LICENSE  README.md
config/: config.example.toml
src/: config.rs  crypto.rs  error.rs  init.rs  lib.rs  main.rs  storage.rs  vault.rs
