[package]
name = "frankshoard"
version = "0.1.0"
edition = "2024"

[dependencies]
aes-gcm = "0.10"
clap = { version = "4.5.60", features = ["derive"]}
dialoguer = "0.11"
dirs = "5"
rand = "0.10.0"
serde = { version = "1", features = ["derive"] }
toml = "0.8"
url = "2.5.8"
uuid = { version = "1.21.0", features = ["v4"] }
zeroize = { version = "1.8.2", features = ["derive"] }
